fix on player mobile and z-indexes

--- a/src/style/components/_full-gallery.scss
+++ b/src/style/components/_full-gallery.scss
@@ -6,7 +6,7 @@
 .fullscreen-gallery {
   position: fixed;
   inset: 0;
-  z-index: 9999;
+  z-index: 300;
   display: flex;
   align-items: center;
   justify-content: center;
