--- a/src/style/components/_projects-navbar.scss
+++ b/src/style/components/_projects-navbar.scss
@@ -20,7 +20,7 @@
   border-bottom: 1px solid rgba($ghost, 0.18);
   box-shadow: 0 10px 30px rgba($night, 0.65);
   color: $text-color;
-  z-index: 90;
+  z-index: 200;
 
   @media screen and (min-width: $breakpoint-sm) {
     // DESKTOP: header verticale a sinistra
