--- a/src/style/components/_scrollbar.scss
+++ b/src/style/components/_scrollbar.scss
@@ -9,7 +9,7 @@
   @include flexColumn;
   gap: 0;
   padding: 0.2rem 0; // Padding minimo totale
-  z-index: 500;
+  z-index: 200;
 }
 
 .dot {
